--- a/aws/PAS-AIO-template.yaml
+++ b/aws/PAS-AIO-template.yaml
@@ -337,7 +337,7 @@ Resources:
       UserData: !Base64
         Fn::Sub: |-
           <script>
-          cfn-init.exe -v -s ${AWS::StackId} --configsets ascending VaultMachine --region ${AWS::Region}
+          cfn-init.exe -v -s ${AWS::StackId} -r VaultMachine --configsets ascending --region ${AWS::Region}
           </script>
       KeyName: !Ref 'KeyName'
       IamInstanceProfile: !Ref 'VaultInstancesProfile'
